2021-07-27  Alexey Shvayka  <shvaikalesh@gmail.com>

        ProxyObject callees should be skipped during Function.prototype.caller resolution
        https://bugs.webkit.org/show_bug.cgi?id=228341

        Reviewed by Yusuke Suzuki.

        * js/caller-property-expected.txt:
        * js/script-tests/caller-property.js:

2021-07-27  Eric Hutchison  <ehutchison@apple.com>

        [BigSur wk2 Debug arm64] fast/text/emoji-overlap.html is a flaky image-only failure.
        https://bugs.webkit.org/show_bug.cgi?id=228528.

        Unreviewed test gardening.

        * platform/mac-wk2/TestExpectations:

2021-07-27  Robert Jenner  <Jenner@apple.com>

        Batch add test expectations for Monterey and iOS on Open Source
        https://bugs.webkit.org/show_bug.cgi?id=228200

        Unreviewed test gardening.

        * platform/mac/platform/mac/fast/text/international/Geeza-Pro-vertical-metrics-adjustment-expected.txt:

2021-07-27  Aditya Keerthi  <akeerthi@apple.com>

        [iOS] REGRESSION: Tapping a <select> element does not show a menu on many websites
        https://bugs.webkit.org/show_bug.cgi?id=228340
        rdar://77137768

        Reviewed by Wenson Hsieh.

        Added a test to verify that tapping a select element, that focuses itself
        inside a touchend listener, displays a menu.

        * fast/forms/ios/form-control-refresh/select/focus-select-in-touchend-expected.txt: Added.
        * fast/forms/ios/form-control-refresh/select/focus-select-in-touchend.html: Added.

2021-07-27  Ayumi Kojima  <ayumi_kojima@apple.com>

        [ iOS ] media/track/track-in-band-duplicate-tracks-when-source-changes.html is a flaky timeout.
        https://bugs.webkit.org/show_bug.cgi?id=228364

        Unreviewed test gardening.

        * platform/ios-wk2/TestExpectations:

2021-07-27  Robert Jenner  <Jenner@apple.com>

        Batch add test expectations for Monterey and iOS on Open Source
        https://bugs.webkit.org/show_bug.cgi?id=228200
