@@ -1,7 +1,0 @@
-div { * color: red; } div { * color: red; }
-
-div {
-    *
-    color:
-    red;
-}
