@@ -1,8 +1,0 @@
-<html>
-    <head>
-    </head>
-    <body>
-        <div id="id-one" style="width:150px; height: 250px"></div>
-        <div></div>
-    </body>
-</html>
